--- a/fundme/src/App.scss
+++ b/fundme/src/App.scss
@@ -5,6 +5,32 @@ body {
   min-height: 100vh;
   overflow: auto;
   background: linear-gradient(to left top, #eccb10, #84c222,);
+  font-family: "Arima", cursive;
+  font-weight: 600;
+}
+
+.row {
+  margin-top: 20px;
+}
+
+.card-header {
+  background-color: rgba(0, 128, 0, 0.637);
+}
+
+.card-body {
+  background-color: rgba(255, 217, 0, 0.61);
+}
+
+.col-4:hover {
+  box-shadow: 10px 10px 25px 0px #3c3c3c;
+}
+
+.col-8:hover {
+  box-shadow: 10px 10px 25px 0px #3c3c3c;
+}
+
+.col-12:hover {
+  box-shadow: 10px 10px 25px 0px #3c3c3c;
 }
 
 .modal {
@@ -16,20 +42,88 @@ body {
   background-color: green;
 }
 
+.navbar #hidden {
+  display: flex;
+  }
+
+  .menu-btn {
+    display: none;
+  }
+
+.navbar-collapse {
+  cursor: pointer;
+
+  @media only screen and (max-width: 995px) {
+
+    .menu-btn {
+      display: block;
+      background-color: #4CAF50;
+      border: 2px solid white;
+      border-radius: 4px;
+    }
+    
+    .navbar-nav {
+      display: none;
+    }
+  
+    .navbar #hidden {
+      position: absolute;
+      left: 0px;
+      top: 56px;
+      max-height: 250px;
+      width: 100%;
+      background-color: #212529;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      z-index: 10;
+    }
+}
+}
+
 .img-bin {
   margin: 10px;
   display: flex;
   flex-direction: column;
+  position: relative;
   label {
-    margin: 0 10px;
-    cursor: pointer;
-    user-select: none;
-  }
-  img {
-    height: auto;
-    width: 150px;
-    display: block;
-  }
+    position: absolute;
+    top: 6px;
+    left: 120px;
+    border-radius: 10em;
+    padding: 2px 6px 3px;
+    text-decoration: none;
+    font: 700 10px/15px sans-serif;
+    background: #555;
+    border: 3px solid #fff;
+    color: #FFF;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.5), inset 0 2px 4px rgba(0,0,0,0.3);
+      text-shadow: 0 1px 2px rgba(0,0,0,0.5);
+      -webkit-transition: background 0.5s;
+      transition: background 0.5s;
+      z-index: 10;
+    }
+    label:hover {
+     background: #E54E4E;
+      padding: 3px 7px 5px;
+      cursor: pointer;
+    }
+    label:active {
+     background: #E54E4E;
+    }
+    [type=checkbox] {
+      display: none;
+    }
+    img {
+        height: auto;
+        width: 150px;
+        display: block;
+        // position: relative;
+        z-index: 5;
+    }
+    [type=checkbox]:checked~img {
+        opacity: 0.3;
+    }
 }
 
 .red-image {
