--- a/fundme/src/sass/line.scss
+++ b/fundme/src/sass/line.scss
@@ -6,6 +6,10 @@
   flex-wrap: wrap;
   &__content {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin:auto;
+  
     flex-wrap: wrap;
     &__title {
       font-size: 20px;
@@ -13,15 +17,16 @@
       margin-right: 50px;
     }
     &__info {
-      font-size: 20px;
+      font-size: 15px;
       letter-spacing: 1px;
-      margin-right: 50px;
+      margin-right: 30px;
     }
   }
   &__buttons {
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    margin: auto;
     button {
       margin-left: 5px;
     }
@@ -33,7 +38,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  flex-direction: wrap;
+  flex-wrap: wrap;
 
   &__content {
     display: flex;
@@ -43,15 +48,21 @@
       font-weight: bold;
       margin-right: 10px;
     }
+    &__modal {
+      font-size: 20px;
+      font-weight: bold;
+      margin-left: 10px;
+      letter-spacing: 1px;
+    }
     &__info {
       font-size: 20px;
-      letter-spacing: 1px;
-      margin-right: 10px;
+      
+      margin-right: 25px;
       display: flex;
       justify-content: center;
       align-items: center;
       flex-wrap: wrap;
-      min-width: 300px;
+      min-width: 250px;
       h2 {
         font-size: 20px;
         color: cornflowerblue;
@@ -91,4 +102,8 @@
   &:hover {
     opacity: 0.7;
   }
+}
+
+.home-group-item {
+  margin-left: 10px;
 }
