--- a/fundme/src/sass/line.scss
+++ b/fundme/src/sass/line.scss
@@ -56,7 +56,6 @@
     }
     &__info {
       font-size: 20px;
-      
       margin-right: 25px;
       display: flex;
       justify-content: center;
@@ -70,7 +69,7 @@
       }
     }
     &__cat {
-      font-size: 26px;
+      font-size: 15px;
       color: orange;
       margin-right: 10px;
       font-weight: bold;
@@ -78,11 +77,12 @@
     }
     &__price {
       color: gray;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-right: 10px;
-      width: 100px;
+      // display: flex;
+      margin: auto;
+      // justify-content: center;
+      // align-items: center;
+      // margin-right: 10px;
+      width: 300px;
       padding-top: 10px;
     }
   }
