--- a/fundme/src/sass/line.scss
+++ b/fundme/src/sass/line.scss
@@ -82,7 +82,7 @@
       // justify-content: center;
       // align-items: center;
       // margin-right: 10px;
-      width: 300px;
+      // width: 300px;
       padding-top: 10px;
     }
   }
