--- a/fundme/src/App.scss
+++ b/fundme/src/App.scss
@@ -1,5 +1,6 @@
 @import "~bootstrap/scss/bootstrap";
 @import "./sass/line";
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css);
 
 body {
   min-height: 100vh;
@@ -46,22 +47,32 @@ body {
   display: flex;
   }
 
-  .menu-btn {
+  // .menu-btn {
+  //   display: none;
+  // }
+  .fa {
     display: none;
   }
 
 .navbar-collapse {
   cursor: pointer;
+  display: flex;
 
   @media only screen and (max-width: 995px) {
 
-    .menu-btn {
-      display: block;
-      background-color: #4CAF50;
-      border: 2px solid white;
-      border-radius: 4px;
-    }
+    // .menu-btn {
+    //   display: block;
+    //   background-color: #4CAF50;
+    //   border: 2px solid white;
+    //   border-radius: 4px;
+    // }
     
+    .fa {
+      display: block;
+      color: white;
+      margin-right: 20px;     
+    }
+
     .navbar-nav {
       display: none;
     }
